--- a/5VendorCertificate/Translations/5VendorCertificate.g.xlf
+++ b/5VendorCertificate/Translations/5VendorCertificate.g.xlf
@@ -68,6 +68,16 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table VendorCertificatesHeader - Field IssueDate - Property Caption</note>
         </trans-unit>
+        <trans-unit id="Table 2807993359 - Field 1351594800 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Specifies the number series associated with the certificate code.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table VendorCertificatesHeader - Field No. Series - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="Table 2807993359 - Field 1351594800 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>No. Series</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table VendorCertificatesHeader - Field No. Series - Property Caption</note>
+        </trans-unit>
         <trans-unit id="Table 1781867017 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Vendor Certificates Lines</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -83,10 +93,30 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table VendorCertificatesLines - Field Category - Property Caption</note>
         </trans-unit>
+        <trans-unit id="Table 1781867017 - Field 53200078 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Specifies the subfamily of the certificate line.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table VendorCertificatesLines - Field Subfamily - Property ToolTip</note>
+        </trans-unit>
         <trans-unit id="Table 1781867017 - Field 53200078 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Subfamily</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table VendorCertificatesLines - Field Subfamily - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 4090220058 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Vendor Certificates</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page VendorCertificatesCard - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 4090220058 - Control 4105281732 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Vendor Certificates Header</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page VendorCertificatesCard - Control GroupName - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1781867017 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Vendor Certificates Lines</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page VendorCertificatesLines - Property Caption</note>
         </trans-unit>
         <trans-unit id="Page 2386197916 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Vendor Certificates</source>
@@ -97,6 +127,36 @@
           <source>Vendor Certificates Header</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Page VendorCertificatesList - Control GroupName - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 1574261460 - Action 3505093526 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4055858012">
+          <source>Manage vendor certificates.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorCard - Action VendorCertificates - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 1574261460 - Action 3505093526 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4055858012">
+          <source>Certificates</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorCard - Action VendorCertificates - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 400138034 - Action 3505093526 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4194195770">
+          <source>Manage vendor certificates.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorList - Action VendorCertificates - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 400138034 - Action 3505093526 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4194195770">
+          <source>Certificates</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorList - Action VendorCertificates - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 854947185 - Field 1800196127 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3921990236">
+          <source>Specifies the number series for vendor certificates.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension PurchasesSetup - Field Vendor Certificate Nos. - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 854947185 - Field 1800196127 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3921990236">
+          <source>Vendor Certificate Nos.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension PurchasesSetup - Field Vendor Certificate Nos. - Property Caption</note>
         </trans-unit>
         <trans-unit id="Enum 3510568841 - EnumValue 4223318242 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>FSC</source>
